# the-rust-programming-language-rust-2021

./: .gitignore  Cargo.toml  README.md  build-release.sh  build.sh  cargo.sh  check.sh  run.sh  rustc.sh  test.sh
chapter-10/generics/src/: lifetimes.rs  main.rs  traits.rs
chapter-2/guessing_game/src/: main.rs
chapter-3/control_flow/src/: main.rs
chapter-3/functions/src/: main.rs
chapter-3/types/src/: main.rs
chapter-3/variables/src/: main.rs
chapter-4/slice_type/src/: main.rs
chapter-5/rectangles/src/: main.rs
chapter-6/control_flow_match/src/: main.rs
chapter-6/enums/src/: main.rs
chapter-7/restaurant/: Cargo.toml
chapter-7/restaurant/src/: lib.rs
chapter-8/strings/src/: main.rs
chapter-8/summary_exercises/: Cargo.toml
chapter-8/summary_exercises/src/: main.rs  median_and_mode.rs  pig_latin.rs
chapter-8/vectors/src/: main.rs
chapter-9/guessing_game_2/src/: guess.rs  main.rs
chapter-9/panics/src/: main.rs
chapter_01-getting-started/hello_world/: hello_world
chapter_08-common_collections/summary_exercises/src/: employee_departments.rs  main.rs  median_and_mode.rs
chapter_10-generic_types_traits_and_lifetimes/generics/src/: fn_and_impl.rs  main.rs  traits.rs
chapter_11-writing_automated_tests/adder/src/: rectangle.rs
chapter_12-an_io_project/minigrep/src/: configuration.rs  lib.rs  main.rs
chapter_13-iterators_and_closures/shirt-company/src/: main.rs
scripts/: build-release.sh  check.sh
src/: lib.rs  main.rs
src/chapters/: mod.rs
src/chapters/c01_getting_started/: mod.rs
tests/: integration_test.rs
(+90 files in other folders)
