[package]
name = "rust-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num = "0.4"
strum = "0.25"
strum_macros = "0.25"


[lib]
name = "adder"
path = "src/chapters/c11_writing_automated_tests/adder/lib.rs"