[package]
name = "rust-book"
version = "0.14.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
rand = "0.8.5"
num = "0.4"
strum = "0.25"
strum_macros = "0.25"